@@ -2,6 +2,8 @@ package umc.teumteum.server.domain.teum.converter;
 
 import java.time.Duration;
 
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
 import umc.teumteum.server.domain.home.entity.Schedule;
 import umc.teumteum.server.domain.home.entity.enums.ScheduleType;
 import umc.teumteum.server.domain.teum.dto.common.TimeSlot;
@@ -19,10 +21,12 @@ import umc.teumteum.server.domain.user.entity.User;
 import umc.teumteum.server.global.exception.GeneralException;
 import umc.teumteum.server.domain.teum.dto.common.ParticipantDto;
 import umc.teumteum.server.global.util.S3Util;
+import umc.teumteum.server.global.util.TimeUtil;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -30,9 +34,13 @@ import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+@Component
+@RequiredArgsConstructor
 public class TeumConverter {
 
-    public static TeumRequest toTeumRequest(TeumRequestDto dto, User sender) {
+    private final TimeUtil timeUtil;
+
+    public TeumRequest toTeumRequest(TeumRequestDto dto, User sender) {
         return TeumRequest.builder()
                 .title(dto.getTitle())
                 .description(dto.getDescription())
@@ -44,7 +52,7 @@ public class TeumConverter {
                 .build();
     }
 
-    public static List<TeumResponse> toTeumResponses(
+    public List<TeumResponse> toTeumResponses(
             List<Long> receiverUserIds, Long senderId,
             TeumRequest request, Function<Long, User> userFetcher
     ) {
@@ -65,7 +73,7 @@ public class TeumConverter {
                 .toList();
     }
 
-    public static TeumReceivedResponseDto toReceivedResponseDto(TeumResponse response, S3Util s3Util) {
+    public TeumReceivedResponseDto toReceivedResponseDto(TeumResponse response, S3Util s3Util) {
         TeumRequest request = response.getTeumRequest();
         User sender = request.getUser();
 
@@ -86,19 +94,19 @@ public class TeumConverter {
                 .date(request.getDate().toString())
                 .timeSlot(TimeSlot.builder()
                         .start(request.getStartTime().toString())
-                        .end(request.getEndTime().toString())
+                        .end(timeUtil.parseAndFormatEndTime(request.getEndTime()))
                         .build())
                 .build();
     }
 
 
-    public static List<TeumReceivedResponseDto> toReceivedResponseDtoList(List<TeumResponse> responses, S3Util s3Util) {
+    public List<TeumReceivedResponseDto> toReceivedResponseDtoList(List<TeumResponse> responses, S3Util s3Util) {
         return responses.stream()
                 .map(response -> toReceivedResponseDto(response, s3Util))
                 .toList();
     }
 
-    public static TeumRequest toResendTeumRequest(TeumRequest parent, TeumResendRequestDto dto, User resender) {
+    public TeumRequest toResendTeumRequest(TeumRequest parent, TeumResendRequestDto dto, User resender) {
         return TeumRequest.builder()
                 .title(parent.getTitle())
                 .description(parent.getDescription())
@@ -111,7 +119,7 @@ public class TeumConverter {
                 .build();
     }
 
-    public static TeumResponse toResendTeumResponse(TeumRequest request, User newReceiver) {
+    public TeumResponse toResendTeumResponse(TeumRequest request, User newReceiver) {
         return TeumResponse.builder()
                 .teumRequest(request)
                 .receiverUser(newReceiver)
@@ -120,24 +128,32 @@ public class TeumConverter {
                 .build();
     }
 
-    public static Schedule toScheduleFromTeumRequest(TeumRequest request, User receiver) {
-        LocalDateTime start = LocalDateTime.of(request.getDate(), request.getStartTime());
-        LocalDateTime end = LocalDateTime.of(request.getDate(), request.getEndTime());
+    public Schedule toScheduleFromTeumRequest(TeumRequest request, User receiver) {
+        LocalDate date = request.getDate();
+        LocalTime start = request.getStartTime();
+        LocalTime end = timeUtil.convertEndTime(request.getEndTime());
+
+        LocalDateTime startDateTime = LocalDateTime.of(date, start);
+
+        // 00:00이 들어와서 LocalTime.MAX로 바뀐 경우 → 다음 날 00:00으로 endTime을 표현
+        LocalDateTime endDateTime = end.equals(LocalTime.MAX)
+                ? LocalDateTime.of(date.plusDays(1), LocalTime.MIDNIGHT)
+                : LocalDateTime.of(date, end);
 
         return Schedule.builder()
                 .title(request.getTitle())
                 .description(request.getDescription())
                 .type(ScheduleType.TEUM)
-                .date(request.getDate())
-                .startTime(start)
-                .endTime(end)
+                .date(date)
+                .startTime(startDateTime)
+                .endTime(endDateTime)
                 .user(receiver)
                 .includeTeum(true)
                 .teumRequest(request)
                 .build();
     }
 
-    public static TeumStatusUpdateResponseDto toStatusUpdateResponseDto(ResponseStatus status, boolean isAccepted, Long teumId) {
+    public TeumStatusUpdateResponseDto toStatusUpdateResponseDto(ResponseStatus status, boolean isAccepted, Long teumId) {
         return TeumStatusUpdateResponseDto.builder()
                 .status(status)
                 .teumCreated(isAccepted)
@@ -145,33 +161,48 @@ public class TeumConverter {
                 .build();
     }
 
-    public static TimeSlot fromSchedule(Schedule schedule) {
-        return new TimeSlot(
-                schedule.getStartTime().toLocalTime().toString(),
-                schedule.getEndTime().toLocalTime().toString()
-        );
+    // TimeSlot 변환 (Schedule → TimeSlot)
+    public TimeSlot sliceScheduleToDate(Schedule schedule, LocalDate targetDate) {
+        LocalDateTime start = schedule.getStartTime();
+        LocalDateTime end = schedule.getEndTime();
+
+        LocalDateTime dayStart = LocalDateTime.of(targetDate, LocalTime.MIN);
+        LocalDateTime dayEnd = LocalDateTime.of(targetDate, LocalTime.MAX);
+
+        // 잘라낸 시작/종료 시간
+        LocalDateTime slicedStart = start.isBefore(dayStart) ? dayStart : start;
+        LocalDateTime slicedEnd = end.isAfter(dayEnd) ? dayEnd : end;
+
+        if (!slicedStart.isBefore(slicedEnd)) {
+            return null; // 무효한 일정
+        }
+
+        String startStr = slicedStart.toLocalTime().format(DateTimeFormatter.ofPattern("HH:mm"));
+        String endStr = slicedEnd.toLocalTime().equals(LocalTime.MAX) ? "24:00"
+                : slicedEnd.toLocalTime().format(DateTimeFormatter.ofPattern("HH:mm"));
+
+        return new TimeSlot(startStr, endStr);
     }
 
-    public static List<TimeSlot> mergeScheduledTimeSlots(List<TimeSlot> scheduledSlots) {
-        if (scheduledSlots.isEmpty()) return Collections.emptyList();
+    // 바쁜 시간대 병합 (겹치거나 인접한 TimeSlot 병합)
+    public List<TimeSlot> mergeScheduledTimeSlots(List<TimeSlot> slots) {
+        if (slots.isEmpty()) return List.of();
 
-        List<TimeSlot> sorted = new ArrayList<>(scheduledSlots);
-        sorted.sort(Comparator.comparing(slot -> LocalTime.parse(slot.getStart())));
+        List<TimeSlot> sorted = new ArrayList<>(slots);
+        sorted.sort(Comparator.comparing(slot -> timeUtil.parseTimeForCompare(slot.getStart())));
 
         List<TimeSlot> merged = new ArrayList<>();
         TimeSlot current = sorted.get(0);
 
         for (int i = 1; i < sorted.size(); i++) {
             TimeSlot next = sorted.get(i);
-            LocalTime currEnd = LocalTime.parse(current.getEnd());
-            LocalTime nextStart = LocalTime.parse(next.getStart());
+            LocalTime currEnd = timeUtil.parseTimeForCompare(current.getEnd());
+            LocalTime nextStart = timeUtil.parseTimeForCompare(next.getStart());
+            LocalTime nextEnd = timeUtil.parseTimeForCompare(next.getEnd());
 
             if (!currEnd.isBefore(nextStart)) {
-                current = new TimeSlot(
-                        current.getStart(),
-                        LocalTime.parse(current.getEnd()).isAfter(LocalTime.parse(next.getEnd()))
-                                ? current.getEnd() : next.getEnd()
-                );
+                String newEnd = currEnd.isAfter(nextEnd) ? current.getEnd() : next.getEnd();
+                current = new TimeSlot(current.getStart(), newEnd);
             } else {
                 merged.add(current);
                 current = next;
@@ -181,35 +212,53 @@ public class TeumConverter {
         return merged;
     }
 
-    public static List<TimeSlot> invertScheduledToAvailable(List<TimeSlot> scheduledSlots) {
+    // 병합된 바쁜 시간대를 반전하여 비어 있는 시간 구간(available)을 계산
+    public List<TimeSlot> invertScheduledToAvailable(List<TimeSlot> scheduledSlots) {
         List<TimeSlot> available = new ArrayList<>();
-        LocalTime startOfDay = LocalTime.of(0, 0);
-        LocalTime endOfDay = LocalTime.of(23, 59);
+        LocalTime startOfDay = LocalTime.MIN;
+        LocalTime endOfDay = LocalTime.MAX;
 
-        for (TimeSlot scheduled : scheduledSlots) {
-            LocalTime scheduledStart = LocalTime.parse(scheduled.getStart());
-            LocalTime scheduledEnd = LocalTime.parse(scheduled.getEnd());
+        List<TimeSlot> sorted = new ArrayList<>(scheduledSlots);
+        sorted.sort(Comparator.comparing(slot -> timeUtil.parseTimeForCompare(slot.getStart())));
 
-            if (startOfDay.isBefore(scheduledStart)) {
-                available.add(new TimeSlot(startOfDay.toString(), scheduledStart.toString()));
+        LocalTime current = startOfDay;
+
+        for (TimeSlot scheduled : sorted) {
+            LocalTime scheduledStart = timeUtil.parseTimeForCompare(scheduled.getStart());
+            LocalTime scheduledEnd = timeUtil.parseTimeForCompare(scheduled.getEnd());
+
+            // 비어 있는 구간 발견 시 추가
+            if (current.isBefore(scheduledStart)) {
+                available.add(new TimeSlot(
+                        current.format(DateTimeFormatter.ofPattern("HH:mm")),
+                        scheduledStart.format(DateTimeFormatter.ofPattern("HH:mm"))
+                ));
             }
-            startOfDay = scheduledEnd;
+
+            // 다음 시작 위치 업데이트
+            if (current.isBefore(scheduledEnd)) {
+                current = scheduledEnd;
+            }
         }
 
-        if (startOfDay.isBefore(endOfDay)) {
-            available.add(new TimeSlot(startOfDay.toString(), endOfDay.toString()));
+        // 하루의 끝까지 비어 있다면 마지막 구간 추가
+        if (current.isBefore(endOfDay)) {
+            available.add(new TimeSlot(
+                    current.format(DateTimeFormatter.ofPattern("HH:mm")),
+                    timeUtil.formatEndTime(endOfDay)
+            ));
         }
 
         return available;
     }
 
-    public static List<String> toDateStringList(List<LocalDate> dates) {
+    public List<String> toDateStringList(List<LocalDate> dates) {
         return dates.stream()
                 .map(LocalDate::toString)
                 .toList();
     }
 
-    public static ScheduledTeumDetailResponseDto toScheduledTeumDetailDto(
+    public ScheduledTeumDetailResponseDto toScheduledTeumDetailDto(
             Schedule baseSchedule,
             List<Schedule> relatedSchedules,
             S3Util s3Util
@@ -219,7 +268,7 @@ public class TeumConverter {
                 .title(baseSchedule.getTitle())
                 .date(baseSchedule.getDate().toString())
                 .startTime(baseSchedule.getStartTime().toLocalTime().toString())
-                .endTime(baseSchedule.getEndTime().toLocalTime().toString())
+                .endTime(timeUtil.parseAndFormatEndTime(baseSchedule.getEndTime().toLocalTime()))
                 .status(baseSchedule.getStatus())
                 .participants(relatedSchedules.stream()
                         .map(s -> {
@@ -231,14 +280,14 @@ public class TeumConverter {
                 .build();
     }
 
-    public static ScheduledTeumResponseDto toScheduledTeumResponseDto(Schedule schedule) {
+    public ScheduledTeumResponseDto toScheduledTeumResponseDto(Schedule schedule) {
         return ScheduledTeumResponseDto.builder()
                 .teumId(schedule.getId())
                 .title(schedule.getTitle())
                 .date(schedule.getDate().toString())
                 .time(List.of(new TimeSlot(
                         schedule.getStartTime().toLocalTime().toString(),
-                        schedule.getEndTime().toLocalTime().toString()
+                        timeUtil.parseAndFormatEndTime(schedule.getEndTime().toLocalTime())
                 )))
                 .build();
     }
